first try on fixing a background image
1. set background images for desktop and mobile
2. tried to fix horizontal scrolling on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -9,4 +9,22 @@
 body {
   font-family: var(--main-font);
   color: var(--main-font-color);
+
+}
+
+@media (min-width: 480px) {
+  body {
+    background-image: url("/public/images/desktop-background.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    overflow-x: hidden;
+  }
+}
+
+@media (max-width: 481px) {
+  body {
+    background-image: url("/public/images/mobile-background.jpg");
+    overflow-x: hidden;
+  }
 }
